Fixed header logo width and height styles problem on mobiles

--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -16,8 +16,14 @@
 }
 .custom-logo {
   height: 128px;
+  max-height: 128px;
   width: auto;
   min-width: min-content;
+
+  @include mq('<=tablet') {
+    height: auto;
+    min-width: initial;
+  }
 }
 .site-title {
   font-size: 2rem;
